Track MP4s with Git LFS and re-commit changes
